<resources>
    <string name="app_name">SmartCart</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_shopping">Cart</string>
    <string name="title_not_shopping">Planning</string>
    <string name="title_camera">Camera</string>
    <string name="title_search">Search</string>
    <string name="title_stats">Statistics</string>
    <string name="search_hint">Search items</string>
    <string name="auto_manual_text">Auto</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="barcode_text_text">Current Barcode</string>
    <string name="capture_content_desc">Capture barcode</string>
    <string name="current_weight">Weight</string>
    <string name="current_cost">Cost</string>
    <string name="current_item_name">Fuji Apple</string>
    <string name="current_item_cost">$1.29 / lb</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="scan">Scan</string>
    <string name="most_purchased_items"><b>Most Purchased Items</b></string>
    <string name="history"><b>History</b></string>
    <string name="time"><b>Time</b></string>
    <string name="date"><b>Date</b></string>
    <string name="total_price"><b>Total Price</b></string>

    <string name="item"><b>Item</b></string>
    <string name="amount"><b>Amount</b></string>
    <string name="price"><b>Price</b></string>
    <string name="weight"><b>Weight</b></string>
    <string name="qty"><b>Qty</b></string>
    <string name="delete"><b>Delete</b></string>
</resources>