<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_shopping" />

    <item
        android:id="@+id/navigation_not_shopping"
        android:icon="@drawable/ic_analytic"
        android:title="@string/title_not_shopping" />

    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_analytic"
        android:title="Stats" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/title_camera" />

</menu>